# slib

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists.txt.in  LICENSE  mem.c  mem.h  project_config.h.in
src/: CMakeLists.txt  mem.c  mem.h
test/: CMakeLists.txt  main.cpp  testMem.cpp
